# memory-master-mind

./: .gitignore  LICENSE.txt  README.md  env-example  pyproject.toml  requirements.txt
.github/workflows/: briefcase_build.yml  pyinstaller_build.yml
memory_master_mind/: __main__.py  app.py  db.py  runner.py  types.py
memory_master_mind/assets/: math_arithmetic.md  quotes_and_verses.md  static_number_sequence.md
memory_master_mind/components/: challenge_interface.py  challenge_timer.py  footer.py  form_label.py  home.py  input_answer.py  math_arithmetic.py  preferences_interface.py  quotes.py  show_challenge_interface.py  static_number_sequence.py  timed_number_sequence.py
mmm/: __init__.py  __main__.py  app.py  db.py  runner.py  types.py
mmm/assets/: math_arithmetic.md  mmm_help.md  quotes.csv  quotes_and_verses.md  static_number_sequence.md  timed_number_sequence.md
mmm/components/: challenge_interface.py  footer.py  form_button.py  header.py  home.py  input_answer.py  input_text.py  math_arithmetic.py  number_sequence.py  preferences_interface.py  quotes.py  show_challenge_interface.py  static_number_sequence.py  timed_number_sequence.py
